# eed_uv_sample_project

./: README.md  main.py  pyproject.toml
src/eed_uv_sample_project/: main.py
